            names that satisfy the requested buildid content.
            Support -d :memory: option for in-memory databases.
            Protect against loops in federated server configurations.
            Add -r option to use -I/-X regexes for grooming stale files.
            Protect against wasted CPU from duplicate concurrent requests.
            Several other performance improvements & prometheus metrics.

Version 0.185

debuginfod-client: Simplify curl handle reuse so downloads which
                   return an error are retried.

elfcompress: Always exit with code 0 when the operation succeeds (even
             when nothing was done). On error the exit code is now always 1.

Version 0.184

debuginfod: Use libarchive's bsdtar as the .deb-family file unpacker.

debuginfod-client: Client caches negative results. If a query for a
		   file failed with 404, an empty 000 permission
		   file is created in the cache. This will prevent
		   requesting the same file for the next 10 minutes.

		   Client objects now carry long-lived curl handles
		   for outgoing connections.  This makes it more
		   efficient for multiple sequential queries, because
		   the TCP connections and/or TLS state info are kept
		   around awhile, avoiding O(100ms) setup latencies.

libdw: handle DW_FORM_indirect when reading attributes

translations: Update Polish translation.

Version 0.183

debuginfod: New thread-busy metric and more detailed error metrics.
            New --fdcache-mintmp and tracking of filesystem freespace.
            New increased webapi concurrency while grooming.

debuginfod-client: DEBUGINFOD_SONAME macro added to debuginfod.h which
                   can be used to dlopen the libdebuginfod.so library.
                   New function debuginfod_set_verbose_fd and
                   DEBUGINFOD_VERBOSE environment variable.

config: profile.sh and profile.csh won't export DEBUGINFOD_URLS unless
        configured --enable-debuginfod-urls[=URLS]
